# flow-connect-backend

./: .env.example  .gitignore  ARCHITECTURE_GUIDE.md  CLAUDE.md  Dockerfile  Dockerfile.worker  PR_DESCRIPTION.md  PR_REVIEW_GUIDE.md  README.md  Taskfile.yml  WAREHOUSE_SETTINGS_IMPLEMENTATION.md  admin.schema.graphql  alembic.ini  code_review_findings.txt  d.py  dev.schema.gql  docker-compose.local-db.yml  docker-compose.yml  logins-workos.csv  main.py  models.py  pyproject.toml  pyrightconfig.json  render.yaml  run_migration_simple.py  run_migrations.py  schema-old.sql  schema.graphql  schema.sql  schema_new.graphql  start.py  token_generator.py  update_nts_tenant.sql  v4.sql
.claude/: settings.local.json
.claude/agents/: README.md  backend-build-validator.md  database-migration-manager.md  pr_199_claude_instructions.md  pr_199_review_report.md  pre-commit-build-validator.md  project-documentation-manager.md  schema-consistency-guardian.md  senior-dev.md
.github/: pull_request_template.md
.github/instructions/: codacy.instructions.md
.github/workflows/: ci-cd.yml  ci.yml  claude-pr-review.yml
.k8s/: deployment.worker.yaml  deployment.yaml  ingress.development.yml  ingress.staging.yml  ingress.yml  manifest.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20250101_insert_default_uoms.py  20250102_add_pg_trgm_extension.py  20250102_add_user_ids_to_transactions.py  20250102_adding_order_acknowledgements.py  20250115_add_pdf_templates.py  20251009_first_revision.py  20251124_add_tasks_and_task_relations_tables.py  20251124_initial_commit.py  20251125_add_companies_table.py  20251125_add_contacts_table.py  (+177 more)
app/: __init__.py  datadog_bootstrap.py
docs/: CAMPAIGNS_ARCHITECTURE.md  CAMPAIGNS_FRONTEND_INTEGRATION.md  CAMPAIGN_EMAIL_SENDING.md  FRONTEND_CAMPAIGN_GUIDE.md  FULFILLMENT_BACKEND_IMPLEMENTATION.md  WAREHOUSE.md  WAREHOUSE_LOCATIONS_PLAN.md  fulfillment-testing-plan.md  fulfillment-v3-features.md  fulfillment-v3-implementation.md
migrations/: add_overage_fields_to_quote_details.sql  atlas.sum  create_spec_sheets_table.sql  create_submittals_tables.sql  migrate_folder_paths_to_pyfiles_folders.py  migrate_spec_sheets_to_files.py
scripts/: backfill_user_ids.py  delete_workos_users_without_org.py  migrate_activity_journals.py  migrate_core_companies_contacts_to_pycrm.sql  migrate_core_notes_to_pycrm.sql  migrate_crm_jobs_to_pycrm.sql  migrate_crm_pre_opportunities_to_pycrm.sql  migrate_excel_companies.py  migrate_user_tasks_to_pycrm.sql  seed_fulfillment_test_data.sql  seed_pdf_templates.py  seed_picking_test_data.sql  seed_shipping_test_data.sql  update_workos_external_id.py  update_workos_org_external_ids.py  upload_file.py
(+1744 files in other folders)
